--- a/socialmedia.css
+++ b/socialmedia.css
@@ -3,18 +3,24 @@
     --o-clorox-color:  hsl(228, 12%, 44%);
 }
 
-body {
-    margin: 0px;
-    background-color: hsl(0, 0%, 100%);
-}
-
 
 
 /*==========  ID Rules  ==========*/
+#background-holder {
+    margin: 0px;
+    transition: all 0.5s ease-in-out;
+    background-color: hsl(0, 0%, 100%);
+}
+
 #flex-box {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+}
+
+#data-words {
+    float: left;
+    transition: all 0.5s ease-in-out;
 }
 
 #flexbox-two {
@@ -23,12 +29,72 @@ body {
     flex-direction: column;
 }
 
+#names {
+    margin-top: 0px;
+    font-size: 20px;
+    text-align: center;
+    font-weight: lighter;
+    transition: all 0.5s ease-in-out;
+}
+
+#hayley-baby {
+    float: left;
+    transition: all 0.5s ease-in-out;
+}
+
+#usernames {
+    float: right;
+    display: inline;
+    margin-top: 2px;
+    text-align: center;
+    margin-inline-start: 5px;
+    transition: all 0.5s ease-in-out;
+}
+
+#head-words {
+    padding-top: 40px;
+    font-size: 70px;
+    font-weight: 800;
+    text-align: center;
+    transition: all 0.5s ease-in-out;
+}
+
+#social-info {
+    width: 87%;
+    height: 80%;
+    border-radius: 10px;
+    margin: 0px auto 20px auto;
+    transition: all 0.5s ease-in-out;
+    background-color: hsl(227, 47%, 96%);
+}
+
+#kept-scores {
+    width: 87%;
+    height: 80%;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    margin: 0px auto 20px auto;
+    transition: all 0.5s ease-in-out;
+    background-color: hsl(227, 47%, 96%);
+}
+
+#line-split {
+    height: 1px;
+    width: 100%;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    transition: all 0.5s ease-in-out;
+    background-color:  hsl(0, 0%, 0%);
+}
+
 #head-wrapper {
     width: 100%;
     margin: 0px;
     height: 250px;
     border-bottom-left-radius: 40px;
     border-bottom-right-radius: 40px;
+    transition: all 0.5s ease-in-out;
     background-color:  hsl(225, 100%, 98%);
 }
 
@@ -38,7 +104,8 @@ body {
     float: right;
     margin-right: 0px;
     border-radius: 50px;
-    background-color: hsl(230, 22%, 74%);
+    transition: all 0.5s ease-in-out;
+    background: linear-gradient(90deg, hsl(230, 22%, 74%), hsl(230, 22%, 74%));
 }
 
 #circle-switch {
@@ -47,6 +114,7 @@ body {
     height: 25px;
     float: right;
     border-radius: 25px;
+    transition: all 0.5s ease-in-out;
     background-color: hsl(0, 0%, 97%);
 }
 
@@ -57,17 +125,89 @@ body {
     padding-top: 40px;
     padding-bottom: 20px;
     color: hsl(228, 12%, 44%);
+    transition: all 0.5s ease-in-out;
 }
+
+
+/*========== Switch Rules  ==========*/
+#circle-switch.first {
+    float: left;
+    transition: all 0.5s ease-in-out;
+    background-color: hsl(232, 19%, 15%);
+}
+
+#toggle-master.second {
+    transition: all 0.5s ease-in-out;
+    background: linear-gradient(90deg, hsl(210, 78%, 56%), hsl(146, 68%, 55%));
+}
+
+#background-holder.third {
+    transition: all 0.5s ease-in-out;
+    background-color: hsl(230, 17%, 14%);
+}
+
+#head-wrapper.fourth {
+    transition: all 0.5s ease-in-out;
+    background-color: hsl(232, 19%, 15%);
+}
+
+#line-split.fifth {
+    transition: all 0.5s ease-in-out;
+    background-color: hsl(228, 34%, 66%);
+}
+
+#head-words.sixth {
+    color: hsl(0, 0%, 100%);
+    transition: all 0.5s ease-in-out;
+}
+
+#data-words.seventh {
+    color: hsl(0, 0%, 100%);
+    transition: all 0.5s ease-in-out;
+}
+
+#present-overview.eighth {
+    color: hsl(0, 0%, 100%);
+    transition: all 0.5s ease-in-out;
+}
+
+#head-word.ninth {
+    color: hsl(0, 0%, 100%);
+    transition: all 0.5s ease-in-out;
+}
+
+#potter-word.tenth {
+    color: hsl(228, 34%, 66%);
+    transition: all 0.5s ease-in-out;
+}
+
+#names.eleventh {
+    color: hsl(228, 34%, 66%);
+    transition: all 0.5s ease-in-out;
+}
+
+#usernames.twelveth {
+    color: hsl(228, 34%, 66%);
+    transition: all 0.5s ease-in-out;
+}
+
+#hayley-baby.thirteenth {
+    color: hsl(228, 34%, 66%);
+    transition: all 0.5s ease-in-out;
+}
+
+#social-info.fourteenth {
+    transition: all 0.5s ease-in-out;
+    background-color: hsl(228, 28%, 20%);
+}
+
+#kept-scores.fifteenth {
+    transition: all 0.5s ease-in-out;
+    background-color: hsl(228, 28%, 20%);
+}
+
 
 /*==========  Class Rules  ==========*/
-.usernames {
-    float: right;
-    display: inline;
-    margin-top: 2px;
-    text-align: center;
-    margin-inline-start: 5px;
-}
-
 .icon-container {
     margin-left: auto;
     margin-right: auto;
@@ -92,64 +232,22 @@ body {
     width: 100%;
     height: 100%;
     position: absolute;
-    margin-top: 200px;
-}
-
-.names {
-    margin-top: 0px;
-    font-size: 20px;
-    text-align: center;
-
-    font-weight: lighter;
-}
-
-.follower-count {
-    padding-top: 40px;
-    font-size: 70px;
-    font-weight: 800;
-    text-align: center;
-}
-
-.line-split {
-    height: 1px;
-    width: 100%;
-    margin-top: 25px;
-    margin-bottom: 25px;
-    background-color:  hsl(0, 0%, 0%);
-}
-
-.social-info {
-    width: 87%;
-    height: 80%;
-    margin: 0px auto 20px auto;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    background-color: hsl(227, 47%, 96%);
-}
-
-.kept-scores {
-    width: 87%;
-    height: 80%;
-    padding-bottom: 20px;
-    margin-bottom: 20px;
-    border-radius: 10px;
-    margin: 0px auto 20px auto;
-    background-color: hsl(227, 47%, 96%);
+    margin-top: 210px;
 }
 
 
 /*==========  Element Rules  ==========*/
 header {
     height: 100%;
-    margin: 20px;
     margin-top: 0px;
-    padding-top: 30px;
+    padding: 30px;
 }
 
 h1 {
     margin: 0px;
     font-size: 25px;
     font-weight: 700;
+    transition: all 0.5s ease-in-out;
     font-family: var(--o-par-font-family);
 }
 
@@ -157,6 +255,7 @@ p {
     margin-top: 5px;
     font-weight: 700;
     color: var(--o-clorox-color);
+    transition: all 0.5s ease-in-out;
     font-family: var(--o-par-font-family);
 }
 
